# MCP_Vina

./: README.md  claude-desktop-config.json  pyproject.toml  server.py
docking/akt1/: config.txt  receptor.pdbqt
molDocking/: __init__.py  __main__.py  docking.py
molDocking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scrubber/scripts/: scrub.py
scrubber/scrubber/: __init__.py  amine_flip.py  common.py  core.py  geometry.py  protonate.py  ringfix.py  storage.py  utils.py
