[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molecular-docking-mcp"
version = "0.1.0"
description = "分子ドッキングシミュレーションのためのMCPサーバー"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "rdkit==2024.9.6",
    "mcp[cli]>=1.2.0",
    "meeko",
    "pathlib",
    "httpx>=0.28.1",
]

[project.scripts]
molecular-docking-mcp = "molDocking.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["molDocking"]
